# planeks

./: .dockerignore  .gitignore  Dockerfile.backend  README.md  docker-compose.yml
frontend/: Dockerfile.frontend  Dockerfile.prod  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/views/app/: AppView.tsx  appview.css
frontend/src/views/datasets/: DataSet.tsx  dataset.css
frontend/src/views/login/: LoginPage.tsx  login.css
frontend/src/views/schemes/: SchemesCreateReadView.tsx  SchemesListView.tsx  schemes.css
src/: .env.example  Dockerfile.backend  Makefile  pyproject.toml  start.sh
src/planeks/: asgi.py  celery.py  urls.py  wsgi.py
src/planeks/settings/: base.py  dev-nodocker.py  dev.py
src/schemes/: constants.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
src/schemes/migrations/: 0001_initial.py  0002_auto_20200910_1541.py  0003_auto_20200910_1544.py  0004_auto_20200910_1550.py
src/users/: admin.py  models.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
